k8s/apps/internal/ejabberd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ejabberd
  namespace: ejabberd
spec:
  ports:
    - name: c2s
      port: 5222
      protocol: TCP
      targetPort: c2s
    - name: http
      port: 5280
      protocol: TCP
      targetPort: http
    - name: https
      port: 5443
      protocol: TCP
      targetPort: https
    - name: s2s
      port: 5269
      protocol: TCP
      targetPort: s2s
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: stun
  selector:
    app.kubernetes.io/instance: ejabberd
    app.kubernetes.io/name: ejabberd
#  type: ClusterIP
  type: LoadBalancer
